# data-engineering-notes

./: .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  Dockerfile  Makefile  README.md  generate.sh  pyproject.toml  step3.sh  step_cleanup.sh
.claude/: CONTEXT.md  DECISIONS.md  DESIGN.md  LESSONS.md  TODOS.md
.github/workflows/: pytest-ci.yml
_templates/: fiche-template.md  quiz-template.md
daily/2026-02-18/: conversation_2026-02-18.md  notes_2026-02-18.md
daily/2026-02-23/: conversation_2026-02-23.md  notes_2026-02-23.md
daily/2026-02-24/: conversation_2026-02-24.md  notes_2026-02-24.md
daily/2026-02-25/: conversation_2026-02-25.md  notes_2026-02-25.md
daily/2026-02-26/: conversation_2026-02-26.md  notes_2026-02-26.md
daily/2026-02-27/: conversation_2026-02-27.md  notes_2026-02-27.md
daily/2026-03-02/: conversation_2026-03-02.md  notes_2026-03-02.md
daily/2026-03-03/: conversation_2026-03-03.md  notes_2026-03-03.md
daily/2026-03-04/: conversation_2026-03-04.md  notes_2026-03-04.md
daily/2026-03-05/: conversation_2026-03-05.md  notes_2026-03-05 copy.md  notes_2026-03-05.md
daily/2026-03-06/: conversation_2026-03-06.md  notes_2026-03-06 copy.md  notes_2026-03-06.md
daily/2026-03-09/: conversation_2026-03-09.md  notes_2026-03-09.md
daily/2026-03-10/: conversation_2026-03-10.md  notes_2026-03-10.md
daily/2026-03-11/: conversation_2026-03-11.md  notes_2026-03-11.md
daily/2026-03-12/: conversation_2026-03-12.md  notes_2026-03-12.md
daily/2026-03-13/: conversation_2026-03-13.md  notes_2026-03-13.md
daily/2026-03-16/: conversation_2026-03-16.md  notes_2026-03-16.md
daily/2026-03-17/: conversation_2026-03-17.md  notes_2026-03-17.md
daily/2026-03-18/: conversation_2026-03-18.md  notes_2026-03-18.md
errors-and-lessons/: log.md
reviews/: spaced-repetition.md
scripts/: improve_notes.py
src/scripts/: enrich.py  (+2 more)
(+178 files in other folders)
