[project]
name = "data-engineering-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "Camille",email = "camille.larpin@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "anthropic (>=0.84.0,<0.85.0)",
    "click (>=8.3.1,<9.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
